--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
             <artifactId>junit-vintage-engine</artifactId>
             <version>5.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.22.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
